--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-guestbook.title = Gästebuch
+guestbook.title = mein workshop
 guestbook.useajax = Use JavaScript (Page won't reload)
 
 guestbook.form.title = Eintrag hinzufügen
